@@ -119,6 +119,7 @@ debian-installer (trunk) UNRELEASED; urgency=low
   * Add the list of needed characters for Kazakh
   * Add the list of needed characters for Vietnamese
   * Add the list of needed characters for Wolof
+
   [ Colin Watson ]
   * Force HOME=$(TEMP) for hfsutils calls throughout powerpc
     hd_media_common target.
@@ -137,6 +138,9 @@ debian-installer (trunk) UNRELEASED; urgency=low
   * Document rescue mode in the manual.
   * Remove historic manual files from (variously) woody and the old build
     system.
+  * Copy KEYRING into the initrd, and preseed anna/keyring with its
+    location. I'm relying on the keyring being small here, although we
+    should really have a keyring udeb instead.
 
   [ Frans Pop ]
   * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
